--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pyapp = "^4.10.0"
 odin = "^1.8.1"
 httpx = "^0.23.0"
 Faker = "^15.0.0"
+pyapp-flow = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 
